# catalog/pkg/openapi/model_agent_artifact_list.go
@@ -1,0 +1,202 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the AgentArtifactList type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &AgentArtifactList{}
+
+// AgentArtifactList A list of agent artifact entities.
+type AgentArtifactList struct {
+	// Token to use to retrieve next page of results.
+	NextPageToken string `json:"nextPageToken"`
+	// Maximum number of resources to return in the result.
+	PageSize int32 `json:"pageSize"`
+	// Number of items in result list.
+	Size int32 `json:"size"`
+	// Array of `AgentArtifact` entities.
+	Items []AgentArtifact `json:"items"`
+}
+
+type _AgentArtifactList AgentArtifactList
+
+// NewAgentArtifactList instantiates a new AgentArtifactList object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAgentArtifactList(nextPageToken string, pageSize int32, size int32, items []AgentArtifact) *AgentArtifactList {
+	this := AgentArtifactList{}
+	this.NextPageToken = nextPageToken
+	this.PageSize = pageSize
+	this.Size = size
+	this.Items = items
+	return &this
+}
+
+// NewAgentArtifactListWithDefaults instantiates a new AgentArtifactList object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAgentArtifactListWithDefaults() *AgentArtifactList {
+	this := AgentArtifactList{}
+	return &this
+}
+
+// GetNextPageToken returns the NextPageToken field value
+func (o *AgentArtifactList) GetNextPageToken() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.NextPageToken
+}
+
+// GetNextPageTokenOk returns a tuple with the NextPageToken field value
+// and a boolean to check if the value has been set.
+func (o *AgentArtifactList) GetNextPageTokenOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.NextPageToken, true
+}
+
+// SetNextPageToken sets field value
+func (o *AgentArtifactList) SetNextPageToken(v string) {
+	o.NextPageToken = v
+}
+
+// GetPageSize returns the PageSize field value
+func (o *AgentArtifactList) GetPageSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.PageSize
+}
+
+// GetPageSizeOk returns a tuple with the PageSize field value
+// and a boolean to check if the value has been set.
+func (o *AgentArtifactList) GetPageSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.PageSize, true
+}
+
+// SetPageSize sets field value
+func (o *AgentArtifactList) SetPageSize(v int32) {
+	o.PageSize = v
+}
+
+// GetSize returns the Size field value
+func (o *AgentArtifactList) GetSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value
+// and a boolean to check if the value has been set.
+func (o *AgentArtifactList) GetSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Size, true
+}
+
+// SetSize sets field value
+func (o *AgentArtifactList) SetSize(v int32) {
+	o.Size = v
+}
+
+// GetItems returns the Items field value
+func (o *AgentArtifactList) GetItems() []AgentArtifact {
+	if o == nil {
+		var ret []AgentArtifact
+		return ret
+	}
+
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value
+// and a boolean to check if the value has been set.
+func (o *AgentArtifactList) GetItemsOk() ([]AgentArtifact, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// SetItems sets field value
+func (o *AgentArtifactList) SetItems(v []AgentArtifact) {
+	o.Items = v
+}
+
+func (o AgentArtifactList) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o AgentArtifactList) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["nextPageToken"] = o.NextPageToken
+	toSerialize["pageSize"] = o.PageSize
+	toSerialize["size"] = o.Size
+	toSerialize["items"] = o.Items
+	return toSerialize, nil
+}
+
+type NullableAgentArtifactList struct {
+	value *AgentArtifactList
+	isSet bool
+}
+
+func (v NullableAgentArtifactList) Get() *AgentArtifactList {
+	return v.value
+}
+
+func (v *NullableAgentArtifactList) Set(val *AgentArtifactList) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAgentArtifactList) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAgentArtifactList) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAgentArtifactList(val *AgentArtifactList) *NullableAgentArtifactList {
+	return &NullableAgentArtifactList{value: val, isSet: true}
+}
+
+func (v NullableAgentArtifactList) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAgentArtifactList) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
