# catalog/pkg/openapi/model_agent_artifact_type_query_param.go
@@ -1,0 +1,110 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// AgentArtifactTypeQueryParam Supported artifact types for querying agent artifacts.
+type AgentArtifactTypeQueryParam string
+
+// List of AgentArtifactTypeQueryParam
+const (
+	AGENTARTIFACTTYPEQUERYPARAM_IMAGE_ARTIFACT    AgentArtifactTypeQueryParam = "image-artifact"
+	AGENTARTIFACTTYPEQUERYPARAM_TEMPLATE_ARTIFACT AgentArtifactTypeQueryParam = "template-artifact"
+)
+
+// All allowed values of AgentArtifactTypeQueryParam enum
+var AllowedAgentArtifactTypeQueryParamEnumValues = []AgentArtifactTypeQueryParam{
+	"image-artifact",
+	"template-artifact",
+}
+
+func (v *AgentArtifactTypeQueryParam) UnmarshalJSON(src []byte) error {
+	var value string
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := AgentArtifactTypeQueryParam(value)
+	for _, existing := range AllowedAgentArtifactTypeQueryParamEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid AgentArtifactTypeQueryParam", value)
+}
+
+// NewAgentArtifactTypeQueryParamFromValue returns a pointer to a valid AgentArtifactTypeQueryParam
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewAgentArtifactTypeQueryParamFromValue(v string) (*AgentArtifactTypeQueryParam, error) {
+	ev := AgentArtifactTypeQueryParam(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for AgentArtifactTypeQueryParam: valid values are %v", v, AllowedAgentArtifactTypeQueryParamEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v AgentArtifactTypeQueryParam) IsValid() bool {
+	for _, existing := range AllowedAgentArtifactTypeQueryParamEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to AgentArtifactTypeQueryParam value
+func (v AgentArtifactTypeQueryParam) Ptr() *AgentArtifactTypeQueryParam {
+	return &v
+}
+
+type NullableAgentArtifactTypeQueryParam struct {
+	value *AgentArtifactTypeQueryParam
+	isSet bool
+}
+
+func (v NullableAgentArtifactTypeQueryParam) Get() *AgentArtifactTypeQueryParam {
+	return v.value
+}
+
+func (v *NullableAgentArtifactTypeQueryParam) Set(val *AgentArtifactTypeQueryParam) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAgentArtifactTypeQueryParam) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAgentArtifactTypeQueryParam) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAgentArtifactTypeQueryParam(val *AgentArtifactTypeQueryParam) *NullableAgentArtifactTypeQueryParam {
+	return &NullableAgentArtifactTypeQueryParam{value: val, isSet: true}
+}
+
+func (v NullableAgentArtifactTypeQueryParam) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAgentArtifactTypeQueryParam) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
